corrected swagger comments
